phf_macros/tests/compile-fail-unicase/equivalent-keys.stderr
error: unsupported key expression
 --> $DIR/equivalent-keys.rs:5:5
  |
5 |     UniCase("FOO") => 42, //~ NOTE one occurrence here
  |     ^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
